resize image on page

--- a/index.html
+++ b/index.html
@@ -12,10 +12,23 @@
     <body>
         <div class="container">
             <h1>My Portfolio</h1>
-            
+
             <div class="profile">
-                <img src="./img/niel.jpg" alt="pic">
-                <p>Nielsen Mudaki</p>
+                <div>
+                    <img src="./img/niel.jpg" alt="pic">
+                    <p>Nielsen Mudaki</p>
+                </div>
+            </div>
+
+            <h2>Projects</h2>
+
+            <div class="card">
+                <div class="card-title">
+                    Photography Website
+                </div>
+                <div class="card-info">
+                    <p>Photography is the art of capturing film using a camera. Photos or photographs are the result of photography.Photos create good memories and we'll have a select of the best photos of the Big Five game animals.</p>
+                </div>
             </div>
         </div>
     </body>
