--- a/index.html
+++ b/index.html
@@ -22,12 +22,25 @@
 
             <h2>Projects</h2>
 
-            <div class="card">
-                <div class="card-title">
-                    Photography Website
+            <div class="row">
+                <div class="card">
+                    <div class="card-title">
+                        Photography Website
+                    </div>
+                    <div class="card-info">
+                        <p>Photography is the art of capturing film using a camera. Photos or photographs are the result of photography.Photos create good memories and we'll have a select of the best photos of the Big Five game animals.</p>
+                        <p><a href="https://nielsen-mudaki.github.io/week-one--project/">Click here</a> to view the live site.</p>
+                    </div>
                 </div>
-                <div class="card-info">
-                    <p>Photography is the art of capturing film using a camera. Photos or photographs are the result of photography.Photos create good memories and we'll have a select of the best photos of the Big Five game animals.</p>
+    
+                <div class="card">
+                    <div class="card-title">
+                        Streetfood Website
+                    </div>
+                    <div class="card-info">
+                        <p>There is something profoundly satisfying
+                            about sharing a meal. Eating together, breaking bread together, is one of the most fundamentally unifying of human experiences.</p>
+                    </div>
                 </div>
             </div>
         </div>
