add live site links

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="row">
                 <div class="card">
                     <div class="card-title">
-                        Photography Website
+                        <h3>Photography Website</h3>
                     </div>
                     <div class="card-info">
                         <p>Photography is the art of capturing film using a camera. Photos or photographs are the result of photography.Photos create good memories and we'll have a select of the best photos of the Big Five game animals.</p>
@@ -35,11 +35,12 @@
     
                 <div class="card">
                     <div class="card-title">
-                        Streetfood Website
+                        <h3>Streetfood Website</h3>
                     </div>
                     <div class="card-info">
                         <p>There is something profoundly satisfying
                             about sharing a meal. Eating together, breaking bread together, is one of the most fundamentally unifying of human experiences.</p>
+                            <p><a href="https://nielsen-mudaki.github.io/Week2-IP/">Click here</a> to view the live site.</p>
                     </div>
                 </div>
             </div>
