add about me section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
     <body>
         <div class="container">
-            <h1>My Portfolio</h1>
 
             <div class="profile">
                 <div>
@@ -30,6 +29,11 @@
                         </div>
                         <div class="card-info">
                             <p>Photography is the art of capturing film using a camera. Photos or photographs are the result of photography.Photos create good memories and we'll have a select of the best photos of the Big Five game animals.</p>
+                            <h6>Technologies Used</h6>
+                            <ul>
+                                <li>HTML - Which was used in the basic structure of the webpage.</li>
+                                <li>CSS - Which was used to style the webpage.</li>
+                            </ul>
                             <p><a href="https://nielsen-mudaki.github.io/week-one--project/" target="_blank">Click here</a> to view the live site.</p>
                             <div>
                                 <img src="./img/Screenshot from 2021-11-06 11-23-47.png" alt="">
@@ -45,12 +49,26 @@
                         </div>
                         <div class="card-info">
                             <p>There is something profoundly satisfying about sharing a meal. Eating together, breaking bread together, is one of the most fundamentally unifying of human experiences.</p>
-                                <p><a href="https://nielsen-mudaki.github.io/Week2-IP/" target="_blank">Click here</a> to view the live site.</p>
-                                <div>
-                                    <img src="./img/Screenshot from 2021-11-06 11-34-41.png" alt="">
-                                </div>
+                            <h6>Technologies Used</h6>
+                            <ul>
+                                <li>HTML - Which was used in the basic structure of the webpage.</li>
+                                <li>CSS - Which was used to style the webpage.</li>
+                            </ul>
+                            <p><a href="https://nielsen-mudaki.github.io/Week2-IP/" target="_blank">Click here</a> to view the live site.</p>
+                            <div>
+                                <img src="./img/Screenshot from 2021-11-06 11-34-41.png" alt="">
+                            </div>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-title">
+                    <h3>About Me</h3>
+                </div>
+                <div class="card-info">
+
                 </div>
             </div>
         </div>
