add technologies used in the projects section

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                             <p>Photography is the art of capturing film using a camera. Photos or photographs are the result of photography.Photos create good memories and we'll have a select of the best photos of the Big Five game animals.</p>
                             <h6>Technologies Used</h6>
                             <ul>
-                                <li>HTML - Which was used in the basic structure of the webpage.</li>
-                                <li>CSS - Which was used to style the webpage.</li>
+                                <li><span class="html">HTML</span> - Which was used in the basic structure of the webpage.</li>
+                                <li><span class="css">CSS</span> - Which was used to style the webpage.</li>
                             </ul>
                             <p><a href="https://nielsen-mudaki.github.io/week-one--project/" target="_blank">Click here</a> to view the live site.</p>
                             <div>
@@ -51,8 +51,8 @@
                             <p>There is something profoundly satisfying about sharing a meal. Eating together, breaking bread together, is one of the most fundamentally unifying of human experiences.</p>
                             <h6>Technologies Used</h6>
                             <ul>
-                                <li>HTML - Which was used in the basic structure of the webpage.</li>
-                                <li>CSS - Which was used to style the webpage.</li>
+                                <li><span class="html">HTML</span> - Which was used in the basic structure of the webpage.</li>
+                                <li><span class="css">CSS</span> - Which was used to style the webpage.</li>
                             </ul>
                             <p><a href="https://nielsen-mudaki.github.io/Week2-IP/" target="_blank">Click here</a> to view the live site.</p>
                             <div>
