add info in the about me section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,28 @@
                     <h3>About Me</h3>
                 </div>
                 <div class="card-info">
-                    
+                    <h6>Educational Background</h6>
+                    <ul>
+                        <li>2021 - Date: Moringa School</li>
+                        <li>2017 - 2020: Kenya Technical Trainer's College</li>
+                        <li>2013 - 2016: Chavakali High School</li>
+                        <li>2002 - 2012: Makini Schools</li>
+                    </ul>
+
+                    <h6>Job experience</h6>
+                    <ul>
+                        <li>September,2019 - December,2019: Minet Insurance Brokers (Kenya) Ltd.</li>
+                        <li>September,2018 - December,2018: Makini Schools</li>
+                    </ul>
+
+                    <p>Software Development is a skillset I have always wanted to get. The challenge that comes with it brings out a lot about life itself and how to counter challenges. <br> Simply put out as <strong>nothing is impossible</strong>. It might be difficult, but it can be done.</p>
+
+                    <h6>Hobbies/ Interests</h6>
+                    <ul>
+                        <li>Software Development</li>
+                        <li>Playing Rugby</li>
+                    </ul>
+
                 </div>
             </div>
         </div>
