--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <div class="row">
                 <div class="col-md-6">
-                    <div class="card">
+                    <div class="card card1">
                         <div class="card-title">
                             <h3>Photography Website</h3>
                         </div>
@@ -43,7 +43,7 @@
                 </div>
     
                 <div class="col-md-6">
-                    <div class="card">
+                    <div class="card card2">
                         <div class="card-title">
                             <h3>Streetfood Website</h3>
                         </div>
@@ -62,6 +62,8 @@
                     </div>
                 </div>
             </div>
+
+            <hr>
 
             <div class="card">
                 <div class="card-title">
