add background image to about me section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <hr>
 
-            <div class="card">
+            <div class="card about">
                 <div class="card-title">
                     <h3>About Me</h3>
                 </div>
