add info in the projects section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="index.css" type="text/css">
         <title>My Portfolio</title>
     </head>
 
@@ -34,6 +34,7 @@
                                 <li><span class="html">HTML</span> - Which was used in the basic structure of the webpage.</li>
                                 <li><span class="css">CSS</span> - Which was used to style the webpage.</li>
                             </ul>
+                            <p>The image below is a screenshot of the website</p>
                             <p><a href="https://nielsen-mudaki.github.io/week-one--project/" target="_blank">Click here</a> to view the live site.</p>
                             <div>
                                 <img src="./img/Screenshot from 2021-11-06 11-23-47.png" alt="">
@@ -54,6 +55,7 @@
                                 <li><span class="html">HTML</span> - Which was used in the basic structure of the webpage.</li>
                                 <li><span class="css">CSS</span> - Which was used to style the webpage.</li>
                             </ul>
+                            <p>The image below is a screenshot of the website</p>
                             <p><a href="https://nielsen-mudaki.github.io/Week2-IP/" target="_blank">Click here</a> to view the live site.</p>
                             <div>
                                 <img src="./img/Screenshot from 2021-11-06 11-34-41.png" alt="">
