--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2>Projects</h2>
 
             <div class="row">
-                <div class="col-md-6">
+                <div class="col">
                     <div class="card card1">
                         <div class="card-title">
                             <h3>Photography Website</h3>
@@ -43,7 +43,7 @@
                     </div>
                 </div>
     
-                <div class="col-md-6">
+                <div class="col">
                     <div class="card card2">
                         <div class="card-title">
                             <h3>Streetfood Website</h3>
